# aws-cdk-stacks

./: .env  README.md  app.py  pyproject.toml
aws_cdk_stacks/: README.md  api_stack.py  ec2_stack.py  eventbridge_stack.py  main_stack.py
src/api_stack/: api.py  handler.py  models.py
src/eventbridge_stack/emitter/: emit_handler.py
src/eventbridge_stack/receiver/: receive_handler.py
tests/unit/: test_main_stack.py
